--- a/Dockerfile_base
+++ b/Dockerfile_base
@@ -1,68 +1,91 @@
 FROM eclipse-temurin:8u362-b09-jdk
 SHELL ["/bin/bash", "-c"]
-ENV PATH=$PATH:/usr/local/ssl/bin
-ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/ssl/lib64:/usr/local/lib
+#ENV PATH=$PATH:/usr/local/ssl/bin
+#ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/ssl/lib64:/usr/local/lib
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib64:/usr/local/lib
 ENV SSL_CERT_DIR=/etc/ssl/certs
-RUN apt -y update && apt -y upgrade && apt -y install binutils gcc perl make zlib1g-dev g++
+ENV PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
+#ENV PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig:/usr/local/ssl/lib64/pkgconfig
+#RUN apt -y update && apt -y upgrade && apt -y install binutils gcc perl make zlib1g-dev g++ xz-utils
+#RUN apt -y update && apt -y upgrade && apt -y install binutils gcc perl make zlib1g-dev g++ xz-utils m4 pkg-config gmpc libtasn1-6-dev libunistring-dev p11-kit libp11-kit-dev
+#RUN apt -y update && apt -y upgrade && apt -y install binutils gcc perl make zlib1g-dev g++ xz-utils m4 pkg-config gmpc libgmp-dev libtasn1-6-dev libunistring-dev libp11-kit-dev
+RUN apt -y update && apt -y upgrade && apt -y install binutils gcc perl make zlib1g-dev g++ xz-utils m4 pkg-config libgmp-dev libtasn1-6-dev libunistring-dev libp11-kit-dev
 # openssl update
-RUN cd /usr/local/src/  \
-    && wget https://www.openssl.org/source/openssl-3.0.8.tar.gz  \
+RUN cd /usr/local/src \
+    && wget https://www.openssl.org/source/openssl-3.0.8.tar.gz \
 #    && apt -y purge openssl \
-    && tar -xf openssl-3.0.8.tar.gz  \
-    && cd openssl-3.0.8  \
-    && ./config --prefix=/usr/local/ssl --openssldir=/usr/local/ssl shared zlib \
+    && tar -xf openssl-3.0.8.tar.gz \
+    && cd openssl-3.0.8 \
+    && ./config --prefix=/usr/local --openssldir=/usr/local shared zlib \
     && make && make install \
-    && echo '/usr/local/ssl/lib64' > /etc/ld.so.conf.d/openssl-3.0.8.conf  \
+    && echo '/usr/local/lib64' > /etc/ld.so.conf.d/openssl-3.0.8.conf \
 #    && source /etc/ld.so.conf.d/openssl-3.0.8.conf \
     && ldconfig -v \
     && rm -f /usr/bin/c_rehash \
     && rm -f /usr/bin/openssl \
-    && sed -i 's@.\{1\}$@:/usr/local/ssl/bin"@' /etc/environment \
+    && rm -f /usr/lib/ssl/misc/CA.pl \
+    && rm -f /usr/lib/ssl/misc/tsget.pl \
+    && rm -f /var/lib/dpkg/info/openssl.postinst \
+    && rm -f /var/lib/dpkg/info/openssl.list \
+    && rm -f /var/lib/dpkg/info/openssl.conffiles \
+    && rm -f /var/lib/dpkg/info/openssl.md5sums \
+    && rm -f /usr/share/lintian/overrides/openssl \
+    && rm -f /usr/lib/ssl/openssl.cnf \
+    && rm -f /etc/ssl/openssl.cnf \
+    && rm -rf /usr/share/doc/openssl \
+    && sed -i 's@.\{1\}$@:/usr/local/bin"@' /etc/environment \
     && cd .. \
     && rm -rf /usr/local/src/openssl-3.0.8 \
     && rm -f /usr/local/src/openssl-3.0.8.tar.gz
 # curl update
 RUN apt -y purge curl \
-    && wget https://curl.se/download/curl-8.0.1.tar.gz  \
-    && tar -xf curl-8.0.1.tar.gz  \
+    && cd /usr/local/src/ \
+    && wget https://curl.se/download/curl-8.0.1.tar.gz \
+    && tar -xf curl-8.0.1.tar.gz \
     && cd curl-8.0.1 \
-    && CPPFLAGS="-I/usr/local/ssl/include" LDFLAGS="-L/usr/local/ssl/lib64" ./configure --with-openssl \
+    && ./configure --with-openssl --prefix=/usr/local \
     && make && make install \
     && ldconfig -v \
-    && cd ..  \
+    && cd .. \
     && rm -f /usr/lib/x86_64-linux-gnu/libcurl.so.4.7.0 \
     && rm -rf curl-8.0.1 \
     && rm -f curl-8.0.1.tar.gz
 # l4z update
-RUN cd /usr/local/src/  \
+RUN cd /usr/local/src \
     && wget https://github.com/lz4/lz4/archive/refs/tags/v1.9.4.tar.gz \
     && tar -xf v1.9.4.tar.gz \
     && cd lz4-1.9.4 \
     && make && make install \
     && ldconfig -v \
     && rm -f ./usr/lib/x86_64-linux-gnu/liblz4.so.1.9.3 \
-    && cd ..  \
+    && cd .. \
     && rm -rf /usr/local/src/lz4-1.9.4 \
     && rm -f /usr/local/src/v1.9.4.tar.gz
 # free type update
-RUN cd /usr/local/src/  \
+RUN cd /usr/local/src \
     && wget https://download.savannah.gnu.org/releases/freetype/freetype-2.13.0.tar.gz \
     && tar -xf freetype-2.13.0.tar.gz \
     && cd freetype-2.13.0 \
     && make && make install \
-    && apt -y purge libfreetype6 \
-    && ldconfig -v \
+#    && apt -y purge libfreetype6 \
     && rm -f /usr/lib/x86_64-linux-gnu/libfreetype.so.6.18.1 \
     && rm -f /usr/lib/x86_64-linux-gnu/libfreetype.so.6 \
-    && cd ..  \
+    && rm -f /var/lib/dpkg/info/libfreetype6:amd64.md5sums \
+    && rm -f /var/lib/dpkg/info/libfreetype6:amd64.symbols \
+    && rm -f /var/lib/dpkg/info/libfreetype6:amd64.shlibs \
+    && rm -f /var/lib/dpkg/info/libfreetype6:amd64.triggers \
+    && rm -f /var/lib/dpkg/info/libfreetype6:amd64.list \
+    && rm -rf /usr/share/doc/libfreetype6 \
+    && ldconfig -v \
+    && cd .. \
     && rm -rf /usr/local/src/freetype-2.13.0 \
     && rm -f /usr/local/src/freetype-2.13.0.tar.gz
 # pcre2 update
 COPY pcre-8.45.tar.gz /usr/local/src/pcre-8.45.tar.gz
-RUN cd /usr/local/src/  \
+RUN cd /usr/local/src \
     && tar -xf pcre-8.45.tar.gz \
     && cd pcre-8.45 \
-    && ./configure \
+    && ./configure --prefix=/usr/local \
     && make && make install \
     && ln -s /usr/local/lib/libpcre.so.1.2.13 /usr/local/lib/libpcre.so.3 \
     && ln -s /usr/local/lib/libpcreposix.so.0.0.7 /usr/local/lib/libpcreposix.so.3 \
@@ -78,9 +101,42 @@ RUN cd /usr/local/src/  \
     && rm -rf /usr/local/share/doc/pcre \
     && rm -rf /usr/share/doc/libpcre3 \
     && ldconfig -v \
-    && cd ..  \
+    && cd .. \
     && rm -rf /usr/local/src/pcre-8.45 \
     && rm -f /usr/local/src/pcre-8.45.tar.gz
-# linux-pam premove
-RUN rm -rf /usr/share/pam
+# nettle update
+RUN cd /usr/local/src \
+    && wget https://ftp.gnu.org/gnu/nettle/nettle-3.8.1.tar.gz \
+    && tar -xf nettle-3.8.1.tar.gz \
+    && cd nettle-3.8.1 \
+    && ./configure --prefix=/usr/local --disable-openssl --enable-shared --enable-mini-gmp \
+    && make && make install \
+#    && export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
+    && cd .. \
+    && rm -rf /usr/local/src/nettle-3.8.1 \
+    && rm -f /usr/local/src/nettle-3.8.1.tar.gz
+# gnutls
+RUN cd /usr/local/src \
+    && wget https://www.gnupg.org/ftp/gcrypt/gnutls/v3.7/gnutls-3.7.8.tar.xz \
+    && xz --decompress gnutls-3.7.8.tar.xz \
+    && tar -xf gnutls-3.7.8.tar \
+    && cd gnutls-3.7.8 \
+    && ./configure --prefix=/usr/local \
+    && make && make install \
+    && rm -f /var/lib/dpkg/info/libgnutls30:amd64.symbols \
+    && rm -f /var/lib/dpkg/info/libgnutls30:amd64.md5sums \
+    && rm -f /var/lib/dpkg/info/libgnutls30:amd64.shlibs \
+    && rm -f /var/lib/dpkg/info/libgnutls30:amd64.triggers \
+    && rm -f /var/lib/dpkg/info/libgnutls30:amd64.list \
+    && rm -f /usr/lib/x86_64-linux-gnu/libgnutls.so.30.31.0 \
+    && rm -f /usr/lib/x86_64-linux-gnu/libgnutls.so.30 \
+    && rm -f /usr/lib/x86_64-linux-gnu/gio/modules/libgiognutls.so \
+    && rm -rf /usr/share/doc/libgnutls30 \
+    && cd .. \
+    && rm -rf /usr/local/src/gnutls-3.7.8 \
+    && rm -f /usr/local/src/gnutls-3.7.8.tar.xz \
+    && rm -f /usr/local/src/gnutls-3.7.8.tar
+# linux-pam premove, openssl include folder delete
+RUN rm -rf /usr/share/pam && rm -rf /usr/local/include/openssl
+# remove lib
 RUN apt -y purge binutils && apt -y purge gcc && apt -y purge perl && apt -y purge make && apt -y purge zlib1g-dev && apt -y purge g++ && apt -y autoremove
